@@ -3,6 +3,10 @@ TODO:
 - add ./packages/* to svn
 - remove all "binary only" from svn
 
+revision 53:
+- fixed Config.in
+- fixed pingtunnel/Config.in
+- fixed jamvm/Config.in
 revision 52:
 - fixed target "openvpn-package" (exclude .svn directories)
 revision 51:
